force-app/main/default/objects/Target__c/fields/Achieved_Value__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Value__c</fullName>
    <label>Achieved Value ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>