force-app/main/default/objects/Target__c/fields/Achieved_Value_In_Teus__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Value_In_Teus__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Achieved Value (In Teus)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>