force-app/main/default/objects/Target__c/fields/Air_Export__c.field-meta.xml
<CustomField>
    <fullName>Air_Export__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Air Export</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>