force-app/main/default/objects/Target__c/fields/ISO_Import__c.field-meta.xml
<CustomField>
    <fullName>ISO_Import__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ISO Import</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>