force-app/main/default/objects/Target__c/fields/Month_Value__c.field-meta.xml
<CustomField>
    <fullName>Month_Value__c</fullName>
    <formula>MONTH(Target_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>