force-app/main/default/objects/Target__c/fields/Percentage_Achieved_Teus__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Achieved_Teus__c</fullName>
    <formula>Achieved_Value_In_Teus__c /  Target_Value_In_Teus__c</formula>
    <label>Percentage Achieved (Teus)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>