force-app/main/default/objects/Target__c/fields/Target_Value_In_Teus__c.field-meta.xml
<CustomField>
    <fullName>Target_Value_In_Teus__c</fullName>
    <label>Target Value (In Teus)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>