force-app/main/default/objects/Target__c/fields/Year_Value__c.field-meta.xml
<CustomField>
    <fullName>Year_Value__c</fullName>
    <formula>Year(Target_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>