force-app/main/default/objects/Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Month__c</columns>
    <columns>Achieved_Value_In_Teus__c</columns>
    <columns>Target_Value_In_Teus__c</columns>
    <columns>Percentage_Achieved_Teus__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>